# CCJBlog

./: .gitignore  Dockerfile  README.md  server.ts  tailwind.config.js
.nuxt/: app.config.mjs  components.d.ts  nuxt.json
.nuxt/content-cache/: content-index.json
.nuxt/dev/: index.mjs  index.mjs.map
.nuxt/types/: content.d.ts  layouts.d.ts  middleware.d.ts  nitro-imports.d.ts  plugins.d.ts  schema.d.ts
V1/: package-lock.json
ccj-blog/: Cargo.toml
ccj-blog/build-scripts/: convert_blogs.py
ccj-blog/build-scripts/blog_scripts/: data.py
ccj-blog/db/: blogs.db  ccj-blog.db
ccj-blog/src/: admin.rs  domain.rs  main.rs  repo.rs
ccj-blog/src/admin/: mod.rs
ccj-blog/src/home/: mod.rs
ccj-blog/static/content/life/: 1.TheBeginning.html
ccj-blog/templates/: admin.html.hbs  index.html.hbs  login.html.hbs
ccj-blog/templates/admin/: dashboard.html.hbs
content/tech/: 2.EngineerOrDev.md
public/: fonts.css  main.css  output.css
public/js/: setCat.js
services/: contentfulService.ts
types/: blog.ts  blogListItem.ts
utils/: contstants.ts
v2/: Dockerfile  Program.cs  bun.lockb  package-lock.json  package.json  server.ts  tailwind.config.js
v2/Properties/: launchSettings.json
v2/public/: fonts.css  main.css  output.css
v2/services/: contentfulService.ts
v2/types/: blog.ts
v2/views/layouts/: main.handlebars
views/layouts/: main.handlebars
views/partials/: blogList.handlebars  footer.handlebars  header.handlebars
views/templates/: about.handlebars  article.handlebars  filteredBlogList.handlebars  home.handlebars
(+7 files in other folders)
