[package]
name = "ccj-blog"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "=0.5.0-rc.3"
bcrypt = "0.10"
rusqlite = { version = "0.29", features = ["bundled"] }
rusoto_core = "0.45"
rusoto_dynamodb = "0.45"
chrono = "0.4"

[dependencies.rocket_dyn_templates]
version = "=0.1.0-rc.3"
features = ["handlebars"]